docs/tutorial/gateway/quickstart.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: m1-router
spec:
  parentRefs:
    - name: eg
  rules:
    - matches:
        - headers:
            - type: Exact
              name: model
              value: m1
      backendRefs:
        - name: m1
          port: 15000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: m2-router
spec:
  parentRefs:
    - name: eg
  rules:
    - matches:
        - headers:
            - type: Exact
              name: model
              value: m2
      backendRefs:
        - name: m2
          port: 16000
