docs/tutorial/gateway/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: m1router
spec:
  parentRefs:
    - name: eg
  rules:
    - matches:
        - headers:
            - type: Exact
              name: model
              value: m1
      backendRefs:
        - name: m1
          port: 15000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: m2-router
spec:
  parentRefs:
    - name: eg
  rules:
    - matches:
        - headers:
            - type: Exact
              name: model
              value: m2
      backendRefs:
        - name: m2
          port: 16000
